# StartNode

./: README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cache.yml  docker-publish.yml  docker.yml
fastnode/: .env.example  alembic.ini  app.py  entrypoint.sh  pyproject.toml  worker.py
fastnode/agents/: base_agent.py  planning_agent.py  traversal_agent.py  typing_agent.py
fastnode/alembic/: env.py
fastnode/clients/: http_client.py  ocr.py  yolo.py
fastnode/config/: config.py  settings.py
fastnode/controllers/: autonode.py
fastnode/factories/: node_factory.py
fastnode/llms/: open_ai.py
fastnode/logger/: logger.py
fastnode/models/: actions.py  files.py  requests.py
fastnode/nodes/: base_node.py  click_and_type.py  download.py  navigation.py  planning.py
fastnode/prompts/: openai_prompt.py
fastnode/services/: bounding_box.py  fastnode.py  graph.py  ocr.py  web_automation.py
fastnode/site_trees/: apollo.json  gmail.json
fastnode/utils/: screenshot_generator.py
ocr/: README.md  newrelic.ini  pyproject.toml
startnode/: .env.example  alembic.ini  app.py  entrypoint.sh  pyproject.toml  worker.py
startnode/agents/: base_agent.py  planning_agent.py  traversal_agent.py  typing_agent.py
startnode/alembic/: env.py
startnode/clients/: ocr.py  yolo.py
startnode/config/: config.py  settings.py
startnode/controllers/: autonode.py
startnode/factories/: node_factory.py
startnode/llms/: open_ai.py
startnode/models/: actions.py  files.py  requests.py
startnode/nodes/: base_node.py  (+4 more)
yolo/: newrelic.ini  pyproject.toml
(+24 files in other folders)
